team page added need review

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Circei Edcation </title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="main-container">
@@ -16,7 +18,7 @@
             <div class="home-content">
                 <img class="logo" src="./assets/logo.png" alt="">
                 <h1 >
-                    #GenZ is #GenV 🧠
+                    #GenZ is #GenV 
                 </h1>
                 <p>
                     Building a generation that is viral in enabling impact & change! 🌏
@@ -1207,7 +1209,10 @@
                 </div>
         </div>
         <div class="section partners">
-
+            <h1>Our partners</h1>
+            <div class="partner-container">
+                
+            </div>
         </div>
         <footer>
             <h3>
