--- a/index.html
+++ b/index.html
@@ -1244,7 +1244,7 @@
             <h1>Our Team</h1>
            <div class="executives">
             <div class="chinmay">
-                <img src="./assets/avatar.png" alt="" class="avatar">
+                <img src="https://www.pngarts.com/files/5/User-Avatar-Transparent.png" alt="" class="avatar">
                 <div class="description">
                     <div class="title">
                         <h1>
@@ -1262,7 +1262,7 @@
             </div>
             <div class="riddhi">
 
-                <img src="./assets/avatar.png" alt="" class="avatar">
+                <img src="https://www.pngarts.com/files/5/User-Avatar-Transparent.png" alt="" class="avatar">
                 <div class="description">
                     <div class="title">
                         <h1>
