Mobile Nav added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,36 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
+    <nav class="responsive-navbar">
+        <div class="nav-container">
+            <div class="link">
+               <a href="#">
+                <img src="./assets/idea.png" alt="" class="link-image">
+               </a>
+            </div>
+            <div class="link">
+               <a href="#">
+                <img src="./assets/innovation.png" alt="" class="link-image">
+               </a>
+            </div>
+            <div class="link">
+               <a href="#">
+                <img src="./assets/strat.png" alt="" class="link-image">
+               </a>
+            </div>
+            <div class="link">
+               <a href="#">
+                <img src="./assets/naturesustainiability.png" alt="" class="link-image">
+               </a>
+            </div>
+            <div class="link">
+               <a href="#">
+                <img src="./assets/idea.png" alt="" class="link-image">
+               </a>
+            </div>
+            
+        </div>
+    </nav>
     <div class="main-container">
         <div class="home-section ">
           
@@ -1211,7 +1241,7 @@
                 </div>
         </div>
         <div class=" partners">
-            <h1>Our partners</h1>
+            <h1>Our Partners</h1>
             <div class="partner-container">
                 <div class="subdomains">
                     <img src="./assets/glbal.png" alt="">
@@ -1228,7 +1258,7 @@
                 <div class="subdomains">
                     <img src="./assets/naturesustainiability.png" alt="">
                     <h2>
-                       Nature Sustainiability
+                        Nature Sustainiability
                     </h2>
                 </div>
                 <div class="subdomains">
@@ -1242,7 +1272,7 @@
         </div>
         <div class="our-team ">
             <h1>Our Team</h1>
-           <div class="executives">
+            <div class="executives">
             <div class="chinmay">
                 <img src="https://www.pngarts.com/files/5/User-Avatar-Transparent.png" alt="" class="avatar">
                 <div class="description">
