--- a/pages/events.html
+++ b/pages/events.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/responsive.css">
     <title>Document</title> 
 </head>
-<body>
+<body  class="appear">
     <nav class="responsive-navbar">
         <div class="nav-container">
             <div class="link">
