--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     Building a generation that is viral in enabling impact & change! 🌏
                 </p>
                 <button  class="home-btn">
-                    Tell me more <span class="rocket"> 🚀..</span>
+                    Tell me more <span class="rocket"> 🚀</span>
                 </button>
               </div>
            <div class="home-contentTwo" style="overflow:visible" >
