working on events page

--- a/pages/team.html
+++ b/pages/team.html
@@ -74,7 +74,7 @@
         </div>
     </nav> -->
     <div class="main-container">
-        <h1 style="text-align:center;color:white;" >Our Team</h1>
+        <h1 style="text-align:center;color:white;font-family: 'Poppins';" >Our Team</h1>
         <div class=" team">
             <div class="exec-container">
                 <div class="exec">
@@ -120,6 +120,7 @@
                     
                 </div>
             </div>
+            <hr>
     
             <div class="theTeam">
                 <div class="member">
