Nave added to all pages

--- a/index.html
+++ b/index.html
@@ -57,20 +57,20 @@
         <img class="logo" src="./assets/logo.png" alt="">
        
         <ul class="links">
-            <li>
-                <a href="">Home </a>
+            <li class="links-l">
+                <a href="index.html">Home </a>
             </li>
-            <li>
-                <a href="">Events </a>
+            <li class="links-l">
+                <a href="./pages/events.html">Events </a>
             </li>
-            <li>
-                <a href="">Team </a>
+            <li class="links-l">
+                <a href="./pages/team.html">Team </a>
             </li>
-            <li>
-                <a href="">Contact </a>
+            <li class="links-l">
+                <a href="./pages/connect.html">Contact </a>
             </li>
-            <li>
-                <a href=""> Internships  </a>
+            <li class="links-l">
+                <a href="./pages/#"> Internships  </a>
             </li>
         </ul>
         
