responsive-nav added

--- a/pages/events.html
+++ b/pages/events.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/responsive.css">
     <title>Document</title> 
+
+    <style>
+        .links-li{
+            font-weight:normal;
+        }
+    </style>
 </head>
-<body  class="appear">
+<body  >
     <!-- <nav class="responsive-navbar">
         <div class="nav-container">
             <div class="link">
@@ -74,20 +80,20 @@
           <h2 id="closenav" style="color:white;">
               close
           </h2>
-          <img class="logo" src="../assets/logo.png" alt="">
+          <!-- <img class="logo" src="../assets/logo.png" alt=""> -->
          
           <ul class="links">
               <li class="links-l">
-                  <a href="index.html">Home </a>
+                  <a href="../index.html">Home </a>
               </li>
               <li class="links-l">
-                  <a href="./pages/events.html">Events </a>
+                  <a href="./events.html">Events </a>
               </li>
               <li class="links-l">
-                  <a href="./pages/team.html">Team </a>
+                  <a href="./team.html">Team </a>
               </li>
               <li class="links-l">
-                  <a href="./pages/connect.html">Contact </a>
+                  <a href="./connect.html">Contact </a>
               </li>
               <li class="links-l">
                   <a href="./pages/#"> Internships  </a>
