--- a/pages/team.html
+++ b/pages/team.html
@@ -80,20 +80,20 @@
           <h2 id="closenav" style="color:white;">
               close
           </h2>
-          <img class="logo" src="../assets/logo.png" alt="">
+          <!-- <img class="logo" src="../assets/logo.png" alt=""> -->
          
           <ul class="links">
               <li class="links-l">
                   <a href="index.html">Home </a>
               </li>
               <li class="links-l">
-                  <a href="./pages/events.html">Events </a>
+                  <a href="./events.html">Events </a>
               </li>
               <li class="links-l">
-                  <a href="./pages/team.html">Team </a>
+                  <a href="./team.html">Team </a>
               </li>
               <li class="links-l">
-                  <a href="./pages/connect.html">Contact </a>
+                  <a href="./connect.html">Contact </a>
               </li>
               <li class="links-l">
                   <a href="./pages/#"> Internships  </a>
