--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 
        </div>
     </div>
+    <img src="./assets/logo.png" alt="" class="main-logo">
     <div class="main-container">
         
         <div class="home-section ">
