--- a/pages/events.html
+++ b/pages/events.html
@@ -119,6 +119,7 @@
  
         </div>
      </div>
+     <img src="../assets/logo.png" alt="" class="main-logo">
     <div class="main-container">
         <div class="events-container">
             <div class="hero-event">
