--- a/pages/connect.html
+++ b/pages/connect.html
@@ -40,7 +40,7 @@
             </div>
 
       </nav>
-      <img src="./assets/logo.png" alt="" class="main-logo">
+      <img src="../assets/logo.png" alt="" class="main-logo">
       <div class="menu-button" id="menu-btn">
         <div class="menu-icon-line">
             
