--- a/pages/events.html
+++ b/pages/events.html
@@ -136,13 +136,13 @@
             </div>
             <div class="events">
                 <div class="event-card">
-                    <img src="../assets/bg.jpg" alt="" class="event-image">
+                    <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fstatic.wixstatic.com%2Fmedia%2F00344e_3c56fc24ad5047ec81d0264c8709113b~mv2.png%2Fv1%2Ffill%2Fw_4135%2Ch_2562%2Cal_c%2F00344e_3c56fc24ad5047ec81d0264c8709113b~mv2.png" alt="" class="event-image">
                     <div class="event-details">
                         <h2>
-                            Event Name
+                            SYNC dot
                         </h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet autem adipisicing elit. Amet autem 
+                            A THREE DAY WORKSHOP AND SIMULATION SERIESON UNITED NATIONS & POLICY MAKING
                         </p>
                         <button class="moreaboutevent" id="event-modal-1">
                             More?
@@ -166,7 +166,7 @@
                     </p>
                 </div>
                 <div class="event-card">
-                    <img src="../assets/bg.jpg" alt="" class="event-image">
+                    <img src="../assets/Rocket.jpg" alt="" class="event-image">
                     <div class="event-details">
                         <h2>
                             Event Name
@@ -181,7 +181,7 @@
                     </div>
                 </div>
                 <div class="event-card">
-                    <img src="../assets/bg.jpg" alt="" class="event-image">
+                    <img src="../assets/Rocket.jpg" alt="" class="event-image">
                     <div class="event-details">
                         <h2>
                             Event Name
@@ -196,7 +196,7 @@
                     </div>
                 </div>
                 <div class="event-card">
-                    <img src="../assets/bg.jpg" alt="" class="event-image">
+                    <img src="../assets/Rocket.jpg" alt="" class="event-image">
                     <div class="event-details">
                         <h2>
                             Event Name
@@ -211,7 +211,7 @@
                     </div>
                 </div>
                 <div class="event-card">
-                    <img src="../assets/bg.jpg" alt="" class="event-image">
+                    <img src="../assets/Rocket.jpg" alt="" class="event-image">
                     <div class="event-details">
                         <h2>
                             Event Name
@@ -226,7 +226,7 @@
                     </div>
                 </div>
                 <div class="event-card">
-                    <img src="../assets/bg.jpg" alt="" class="event-image">
+                    <img src="../assets/Rocket.jpg" alt="" class="event-image">
                     <div class="event-details">
                         <h2>
                             Event Name
@@ -241,7 +241,7 @@
                     </div>
                 </div>
                 <div class="event-card">
-                    <img src="../assets/bg.jpg" alt="" class="event-image">
+                    <img src="../assets/Rocket.jpg" alt="" class="event-image">
                     <div class="event-details">
                         <h2>
                             Event Name
@@ -256,7 +256,7 @@
                     </div>
                 </div>
                 <div class="event-card">
-                    <img src="../assets/bg.jpg" alt="" class="event-image">
+                    <img src="../assets/Rocket.jpg" alt="" class="event-image">
                     <div class="event-details">
                         <h2>
                             Event Name
